--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,7 +9,19 @@
   font-family: "Montserrat", sans-serif;
   width: 100%;
   height: 100vh;
-  background-color: darkgrey;
+  background: #7f7fd5; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #91eae4,
+    #86a8e7,
+    #7f7fd5
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #91eae4,
+    #86a8e7,
+    #7f7fd5
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .text-shadow {
